--- a/todolist/Dockerfile
+++ b/todolist/Dockerfile
@@ -1,5 +1,13 @@
-FROM openjdk:23-jdk-slim
-ARG JAR_FILE=target/todolist-0.0.1.jar
-COPY ${JAR_FILE} app_todolist.jar
+# === Etapa 1: construir el JAR con Maven ===
+FROM maven:3.9.8-eclipse-temurin-17 AS build
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn -q clean package -DskipTests
+
+# === Etapa 2: ejecutar el JAR ===
+FROM eclipse-temurin:17-jre-alpine
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "app_todolist.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
